--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -51,13 +51,17 @@
                         <td>{{ shift.end|date('H:i') }}</td>
                         <td>{{ shift.description }}</td>
                         <td>
-                            <ol>
+                            <ol class="list-group">
                                 {% set count = shift.numberPeople - (shift.people|length) %}
 
                                 {% for person in shift.people %}
                                     {% if not plan.isTemplate %}
                                         {% if (is_granted('ROLE_USER') and app.user.id == plan.user.id) %}
-                                            <li>{{ person.name }} {% if is_granted('ROLE_USER') %}<a href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil" aria-hidden="true"></i></a>{% endif %}
+                                            <li class="list-group-item flex-column align-items-start">
+                                                <div class="d-flex w-100 justify-content-between">
+                                                    <span class="mb-1">{{ person.name }}</span>
+                                                    <small>{% if is_granted('ROLE_USER') %}<a href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil pull-right" aria-hidden="true"></i></a>{% endif %}</small>
+                                                </div>
 
                                                 <ul id="person-details">
                                                     {% if person.email %}<li>{% trans %}email{% endtrans %}: <a href="mailto:{{ person.email }}?Subject=Kontakt Schichtplan: {{ plan.title }} " target="_top">{{ person.email }}</a></li>{% endif %}
@@ -65,19 +69,19 @@
                                                 </ul>
                                             </li>
                                         {% else %}
-                                            <li>{{ person.alias }}</li>
+                                            <li class="list-group-item">{{ person.alias }}</li>
                                         {% endif %}
                                     {% else %}
-                                        <li>Person</li>
+                                        <li class="list-group-item">Person</li>
                                     {% endif %}
                                 {% endfor %}
 
                                 {% if count != 0 %}
                                     {% for person in 1..count %}
                                         {% if not plan.isTemplate %}
-                                            <li><a class="text-nowrap" href="{{ path('person_new', { 'shift': shift.id }) }}">{% trans %}enroll{% endtrans %}</a> </li>
+                                            <li class="list-group-item"><a class="text-nowrap" href="{{ path('person_new', { 'shift': shift.id }) }}">{% trans %}enroll{% endtrans %}</a> </li>
                                         {% else %}
-                                            <li>{% trans %}person{% endtrans %}</li>
+                                            <li class="list-group-item">{% trans %}person{% endtrans %}</li>
                                         {% endif %}
                                     {% endfor %}
                                 {% endif %}
