--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -60,7 +60,7 @@
                                             <li class="list-group-item flex-column align-items-start">
                                                 <div class="d-flex w-100 justify-content-between">
                                                     <span class="mb-1">{{ person.name }}</span>
-                                                    <small>{% if is_granted('ROLE_USER') %}<a href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil pull-right" aria-hidden="true"></i></a>{% endif %}</small>
+                                                    <small>{% if is_granted('ROLE_USER') %}<a class="edit" href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil pull-right" aria-hidden="true"></i></a>{% endif %}</small>
                                                 </div>
 
                                                 <ul id="person-details">
