fix wrong selectors

--- a/app/Resources/views/plan/new.html.twig
+++ b/app/Resources/views/plan/new.html.twig
@@ -16,7 +16,7 @@
             {{ form_row(form.description) }}
             <div>
                 {{ form_row(form.isTemplate) }}
-                <div style="display: none;">
+                <div id="isPublic" style="display: none;">
                     {{ form_row(form.isPublic) }}
                 </div>
             </div>
