--- a/app/Resources/views/plan/edit.html.twig
+++ b/app/Resources/views/plan/edit.html.twig
@@ -26,7 +26,7 @@
             <h3>{% trans %}shifts{% endtrans %}</h3>
             <ul class="shifts list-unstyled" data-prototype="{{ form_widget(edit_form.shifts.vars.prototype)|e('html_attr') }}">
                 {% for shift in edit_form.shifts %}
-                    <li>{{ form_widget(shift) }}</li>
+                    <li class="card">{{ form_widget(shift) }}</li>
                     <hr>
                 {% endfor %}
             </ul>
