--- a/src/AppBundle/Resources/public/css/general.css
+++ b/src/AppBundle/Resources/public/css/general.css
@@ -25,3 +25,7 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+textarea {
+    padding: 5px !important;
+}
