--- a/app/Resources/views/plancollection/index.html.twig
+++ b/app/Resources/views/plancollection/index.html.twig
@@ -1,39 +1,46 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Plancollections list</h1>
+    <div class="col-12 d-flex justify-content-end">
+        <h1 class="mr-auto p-2">{% trans %}plan_collection{% endtrans %}</h1>
+    </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for planCollection in planCollections %}
-            <tr>
-                <td><a href="{{ path('plancollection_show', { 'id': planCollection.id }) }}">{{ planCollection.id }}</a></td>
-                <td>{{ planCollection.title }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('plancollection_show', { 'id': planCollection.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('plancollection_edit', { 'id': planCollection.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('plancollection_new') }}">Create a new planCollection</a>
-        </li>
-    </ul>
+    <div class="col-12">
+        {% if planCollections is not empty %}
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>{{ knp_pagination_sortable(pagination, 'title'|trans, 'p.title') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for collection in planCollections %}
+                        <tr>
+                            <th><a href="{{ path('plancollection_show', { 'id': collection.id }) }}">{{ collection.title }}</a></th>
+                        </tr>
+                        <td>
+                            <ul>
+                                <li>
+                                    <a href="{{ path('plancollection_show', { 'id': collection.id }) }}">show</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('plancollection_edit', { 'id': collection.id }) }}">edit</a>
+                                </li>
+                            </ul>
+                        </td>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
+            </div>
+        {% else %}
+            <div class="alert alert-warning" role="alert">
+                <strong>{% trans %}warning{% endtrans %}</strong> {% trans %}no_plan_collections{% endtrans %}
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
+
