--- a/app/Resources/views/plancollection/index.html.twig
+++ b/app/Resources/views/plancollection/index.html.twig
@@ -41,6 +41,7 @@
                 <strong>{% trans %}warning{% endtrans %}</strong> {% trans %}no_plan_collections{% endtrans %}
             </div>
         {% endif %}
+        <a class="btn btn-primary" href="{{ path('plancollection_new') }}">{% trans %}create{% endtrans %}</a>
     </div>
 {% endblock %}
 
