--- a/app/Resources/views/plancollection/new.html.twig
+++ b/app/Resources/views/plancollection/new.html.twig
@@ -1,16 +1,18 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'form/fields.html.twig' %}
 
 {% block body %}
-    <h1>Plancollection creation</h1>
+    <div class="col-12">
+        <h1>{% trans %}new_plan_collection{% endtrans %}</h1>
+    </div>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('plancollection_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    <div class="col-12">
+        {{ form_start(form) }}
+        <div class="form-group">
+            {{ form_row(form.title) }}
+        </div>
+        <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
+
