--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.png') }}" />
     </head>
     <body>
-        <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+        <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse text-nowrap">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
