added plan multi select

--- a/app/Resources/views/plancollection/new.html.twig
+++ b/app/Resources/views/plancollection/new.html.twig
@@ -10,6 +10,7 @@
         {{ form_start(form) }}
         <div class="form-group">
             {{ form_row(form.title) }}
+            {{ form_row(form.plans) }}
         </div>
         <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
         {{ form_end(form) }}
