dont show delete button to people who cant use it

--- a/app/Resources/views/plancollection/show.html.twig
+++ b/app/Resources/views/plancollection/show.html.twig
@@ -27,11 +27,14 @@
         </div>
     </div>
 
+{% if (is_granted('ROLE_USER') and app.user.id == planCollection.user.id) %}
     <div class="col-12">
         {{ form_start(delete_form) }}
         <input class="btn btn-danger btn-sm pull-right" type="submit" value="{% trans %}delete{% endtrans %}">
         {{ form_end(delete_form) }}
     </div>
+{% endif %}
+
 {% endblock %}
 
 
