added correct naming

--- a/app/Resources/views/plancollection/show.html.twig
+++ b/app/Resources/views/plancollection/show.html.twig
@@ -7,7 +7,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>{% trans %}title{% endtrans %}</th>
+                        <th>{% trans %}plans{% endtrans %}</th>
                         <th>{% trans %}link{% endtrans %}</th>
                     </tr>
                 </thead>
