--- a/app/Resources/views/plan/new.html.twig
+++ b/app/Resources/views/plan/new.html.twig
@@ -30,7 +30,7 @@
                 <li class="card">{{ form_widget(shift) }}</li>
             {% endfor %}
         </ul>
-        <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
+        <button class="btn btn-primary" type="submit">{% trans %}create{% endtrans %}</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
