--- a/app/Resources/views/plancollection/new.html.twig
+++ b/app/Resources/views/plancollection/new.html.twig
@@ -12,7 +12,7 @@
             {{ form_row(form.title) }}
             {{ form_row(form.plans) }}
         </div>
-        <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
+        <button class="btn btn-primary" type="submit">{% trans %}create{% endtrans %}</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
