--- a/app/Resources/views/plan/by-template/new-by-template-unauth.html.twig
+++ b/app/Resources/views/plan/by-template/new-by-template-unauth.html.twig
@@ -17,7 +17,7 @@
                 {{ form_row(form.password.second) }}
                 {{ form_row(form.description) }}
             </div>
-            <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
+            <button class="btn btn-primary" type="submit">{% trans %}create{% endtrans %}</button>
             {{ form_end(form) }}
         </div>
     {% else %}
