--- a/app/Resources/views/plan/by-template/new-by-template.html.twig
+++ b/app/Resources/views/plan/by-template/new-by-template.html.twig
@@ -14,7 +14,7 @@
                 {{ form_row(form.date) }}
                 {{ form_row(form.description) }}
             </div>
-            <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
+            <button class="btn btn-primary" type="submit">{% trans %}create{% endtrans %}</button>
             {{ form_end(form) }}
         </div>
     {% else %}
