--- a/app/Resources/views/plancollection/edit.html.twig
+++ b/app/Resources/views/plancollection/edit.html.twig
@@ -2,7 +2,7 @@
 {% form_theme edit_form 'form/fields.html.twig' %}
 
 {% block body %}
-    <div class="col-12">
+    <div class="col-12" xmlns="http://www.w3.org/1999/html">
         <h1>{% trans %}edit{% endtrans %}</h1>
     </div>
 
@@ -12,13 +12,13 @@
             {{ form_row(edit_form.title) }}
             {{ form_row(edit_form.plans) }}
 
-        <input class="btn btn-primary" type="submit" value="{% trans %}save{% endtrans %}" />
+        <button class="btn btn-primary" type="submit">{% trans %}save{% endtrans %}</button>
         </div>
         {{ form_end(edit_form) }}
     </div>
     <div class="col-12">
         {{ form_start(delete_form) }}
-        <input class="btn btn-sm btn-danger pull-right" type="submit" value="{% trans %}delete{% endtrans %}">
+        <button class="btn btn-sm btn-danger pull-right" type="submit">{% trans %}delete{% endtrans %}</button>
         {{ form_end(delete_form) }}
     </div>
 {% endblock %}
