--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -11,7 +11,7 @@
     </div>
 
     <div>
-        <input class="btn btn-primary" type="submit" value="{{ 'registration.submit'|trans }}" />
+        <button class="btn btn-primary" type="submit" value="{{ 'registration.submit'|trans }}">{{ 'registration.submit'|trans }}</button>
     </div>
     {{ form_end(form) }}
 </div>
