--- a/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
@@ -6,6 +6,6 @@
            {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
            {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
        </div>
-       <input class="btn btn-primary" type="submit" value="{{ 'resetting.reset.submit'|trans }}" />
+       <button class="btn btn-primary" type="submit" value="{{ 'resetting.reset.submit'|trans }}">{{ 'resetting.reset.submit'|trans }}</button>
    {{ form_end(form) }}
 </div>
