--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -30,7 +30,7 @@
             </div>
 
 
-            <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+            <button class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">{{ 'security.login.submit'|trans }}</button>
         </form>
         <a class="pull-right" href="{{ path('fos_user_resetting_request') }}">{{ 'lost_password'|trans([], 'messages', null) }}</a>
     </div>
