--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -8,7 +8,7 @@
             <input class="form-control" type="text" id="username" name="username" required="required" />
         </div>
         <div>
-            <input class="btn btn-primary" type="submit" value="{{ 'resetting.request.submit'|trans }}" />
+            <button class="btn btn-primary" type="submit" value="{{ 'resetting.request.submit'|trans }}">{{ 'resetting.request.submit'|trans }}</button>
         </div>
     </form>
 </div>
