--- a/app/Resources/views/person/edit.html.twig
+++ b/app/Resources/views/person/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="col-12">
-        <h1>Edit {{ person.name }}</h1>
+        <h1>{% trans %}edit_person{% endtrans %} {{ person.name }}</h1>
     </div>
 
     <div class="col-12">
