--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -120,7 +120,7 @@
                     </div>
                     <div class="modal-footer">
                         <a href="{{ path('fos_user_resetting_request') }}">{% trans %}lost_password{% endtrans %}</a>
-                        <input class="btn btn-primary" type="submit" value="{% trans %}submit{% endtrans %}" />
+                        <button class="btn btn-primary" type="submit">{% trans %}submit{% endtrans %}</button>
                     </div>
                 </form>
             </div>
