--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -11,5 +11,7 @@
     </div>
     <button class="btn btn-primary" type="submit" value="{{ 'profile.edit.submit'|trans }}">{{ 'profile.edit.submit'|trans }}</button>
     {{ form_end(form) }}
+    <br>
+    <a href="{{ path('user_delete') }}" class=" btn btn-sm btn-danger">{{ 'delete'|trans }}</a>
     <a class="pull-right" href="{{ path('fos_user_resetting_request') }}">{{ 'change_password.submit'|trans }}</a>
 </div>
