--- a/app/Resources/views/plancollection/show.html.twig
+++ b/app/Resources/views/plancollection/show.html.twig
@@ -8,6 +8,7 @@
                 <thead>
                     <tr>
                         <th>{% trans %}plans{% endtrans %}</th>
+                        <th>{% trans %}date{% endtrans %}</th>
                         <th>{% trans %}link{% endtrans %}</th>
                     </tr>
                 </thead>
@@ -15,6 +16,7 @@
                 {% for plan in planCollection.plans %}
                     <tr>
                         <td>{{ plan.title }}</td>
+                        <td>{{ plan.date|date('d.m.Y') }}</td>
                         <td>
                             <a href="{{ path('plan_show', { 'id': plan.id }) }}">
                                 {{ url('plan_show', { 'id': plan.id }) }}
