--- a/app/Resources/views/shift/index.html.twig
+++ b/app/Resources/views/shift/index.html.twig
@@ -17,6 +17,7 @@
                 <tr>
                     <th>{{ knp_pagination_sortable(pagination, 'title'|trans, 's.title') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
                     <th>{{ 'description'|trans }}</th>
+                    <th>{{ 'date'|trans }}</th>
                     <th>{{ knp_pagination_sortable(pagination, 'start'|trans, 's.start') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
                     <th>{{ knp_pagination_sortable(pagination, 'end'|trans, 's.end') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
                 </tr>
@@ -26,6 +27,7 @@
                     <tr>
                         <td><a href="{{ path('plan_show', { 'id': shift.plan.id }) }}">{{ shift.title }}</a></td>
                         <td>{{ shift.description }}</td>
+                        <td>{{ shift.plan.date|date('d.m.Y') }}</td>
                         <td>{% if shift.start %}{{ shift.start|date('H:i') }}{% endif %}</td>
                         <td>{% if shift.end %}{{ shift.end|date('H:i') }}{% endif %}</td>
                     </tr>
