--- a/app/Resources/views/plancollection/show.html.twig
+++ b/app/Resources/views/plancollection/show.html.twig
@@ -13,7 +13,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for plan in planCollection.plans %}
+                {% for plan in planCollection.plans | sortbyfield('date') %}
                     <tr>
                         <td>{{ plan.title }}</td>
                         <td>{{ plan.date|date('d.m.Y') }}</td>
