--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -7,18 +7,20 @@
     {% else %}
         {% set isAuth = false %}
     {% endif %}
-
     <div class="col-12 justify-content-end">
         <h1>{{ plan.title }}
             {% if plan.isTemplate %}
                 <span class="float-md-right badge badge-info">{{ 'template'|trans }}</span>
             {% else %}
-            {% if not plan.isTemplate %}<span class="float-right">{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</span>{% endif %}
+                {% if not plan.isTemplate %}<span
+                        class="float-right">{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</span>{% endif %}
             {% endif %}
         </h1>
     </div>
     <div class="col-12">
-        {% if is_granted('ROLE_USER') and app.user.id == plan.user.id %}<a class="pull-right" href="{{ path('plan_edit', { 'id': plan.id }) }}"><i class="fa fa-pencil" aria-hidden="true"></i> {% trans %}edit{% endtrans %}</a>{% endif %}
+        {% if is_granted('ROLE_USER') and app.user.id == plan.user.id %}<a class="pull-right"
+                                                                           href="{{ path('plan_edit', { 'id': plan.id }) }}">
+            <i class="fa fa-pencil" aria-hidden="true"></i> {% trans %}edit{% endtrans %}</a>{% endif %}
     </div>
     {% if plan.description %}
         <div class="col-12">
@@ -27,110 +29,173 @@
     {% endif %}
 
     <div class="col-12">
-        {% if not isAuth%}
-            <a id="passwordPrompt" href="#" class="pull-right"><i class="fa fa-eye" aria-hidden="true"></i> {% trans %}show_details{% endtrans %}</a>
+        {% if not isAuth %}
+            <a id="passwordPrompt" href="#"><i class="fa fa-eye" aria-hidden="true"></i> {% trans %}
+                show_details{% endtrans %}</a>
         {% endif %}
 
         {% if plan.shifts is not empty %}
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>{% trans %}title{% endtrans %}</th>
-                    <th>{% trans %}start{% endtrans %}</th>
-                    <th>{% trans %}end{% endtrans %}</th>
-                    <th>{% trans %}description{% endtrans %}</th>
-                    <th>{% trans %}people_needed{% endtrans %}</th>
-                </tr>
-                </thead>
-                <tbody>
+            <div class="row no-gutter">
                 {% for shift in plan.shifts %}
-                    <tr class="wow fadeInUp">
-                        <th scope="row">{{ shift.title }}</th>
-                        <td>{{ shift.start|date('H:i') }}</td>
-                        <td>{{ shift.end|date('H:i') }}</td>
-                        <td>{{ shift.description }}</td>
-                        <td>
-                            <ol class="list-group">
-                                {% set count = shift.numberPeople - (shift.people|length) %}
+                    <div class="card shift-card col-lg-3 col-md-4 col-12 ">
+                        <h2 class="card-title">{{ shift.title }}</h2>
+                        <h4 class="card-title">{{ shift.start|date('H:i') }} - {{ shift.end|date('H:i') }}</h4>
+                        <p>
+                            {{ shift.description }}
+                        <hr>
+                        {% set count = shift.numberPeople - (shift.people|length) %}
+                        {% set percent = 100 / shift.numberPeople * (shift.people|length) %}
 
+                        <div class="progress" style="height: 20px">
+                            <div class="progress-bar" role="progressbar" style="width: {{ percent }}%; height: 20px"
+                                 aria-valuenow="{{ percent }}" aria-valuemin="0"
+                                 aria-valuemax="{{ shift.numberPeople }}">{{ shift.people|length }}
+                                von {{ shift.numberPeople }}</div>
+                        </div>
+                        <hr>
+                        {% if not plan.isTemplate %}
+                            {% if shift.numberPeople != (shift.people|length)%}
+                                <a class="text-nowrap btn btn-primary"
+                                   href="{{ path('person_new', { 'shift': shift.id }) }}">
+                                    {% trans %}enroll{% endtrans %}
+                                </a>
+                                <hr>
+                            {% endif %}
+                        {% else %}
+                            <li class="list-group-item">{% trans %}person{% endtrans %}</li>
+                        {% endif %}
+
+                        <ul class="row">
+                            <div class="col-12">
                                 {% for person in shift.people %}
                                     {% if not plan.isTemplate %}
                                         {% if (is_granted('ROLE_USER') and app.user.id == plan.user.id) %}
-                                            <li class="list-group-item flex-column align-items-start">
-                                                <div class="d-flex w-100 justify-content-between">
-                                                    <span class="mb-1"><b>{{ person.name }}</b></span>
-                                                    <small>{% if is_granted('ROLE_USER') %}<a class="edit" href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil pull-right" aria-hidden="true"></i></a>{% endif %}</small>
-                                                </div>
-
-                                                <ul id="person-details">
-                                                    {% if person.email %}<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:{{ person.email }}?Subject=Kontakt Schichtplan: {{ plan.title }} " target="_top">{{ person.email }}</a></li>{% endif %}
-                                                    {% if person.phone %}<li><i class="fa fa-phone" aria-hidden="true"></i> {{ person.phone|phone_number_format('INTERNATIONAL') }}</li>{% endif %}
+                                            <li class="list-group-item">
+                                                <span class="mb-1 col-10"><b>{{ person.name }}</b></span>
+                                                <small class="col-2">
+                                                    {% if is_granted('ROLE_USER') %}
+                                                        <a class="edit  pull-right" href="{{ path('person_edit',{ 'id': person.id }) }}">
+                                                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                                                        </a>
+                                                    {% endif %}
+                                                </small>
+                                                <ul class="col-12">
+                                                    {% if person.email %}
+                                                        <li>
+                                                            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                                            <a href="mailto:{{ person.email }}?Subject=Kontakt Schichtplan: {{ plan.title }} "
+                                                               target="_top">{{ person.email }}
+                                                            </a>
+                                                        </li>
+                                                    {% endif %}
+                                                    {% if person.phone %}
+                                                        <li>
+                                                            <i class="fa fa-phone" aria-hidden="true"></i> {{ person.phone|phone_number_format('INTERNATIONAL') }}
+                                                        </li>
+                                                    {% endif %}
                                                 </ul>
                                             </li>
                                         {% else %}
-                                            <li class="list-group-item">{{ person.alias }}</li>
+                                            <li>{{ person.alias }}</li>
                                         {% endif %}
                                     {% else %}
-                                        <li class="list-group-item">Person</li>
+                                        <li>Person</li>
                                     {% endif %}
                                 {% endfor %}
+                            </div>
+                        </ul>
+                        </p>
+                    </div>
+                    {#<tr class="wow fadeInUp">#}
+                    {#<th scope="row">{{ shift.title }}</th>#}
+                    {#<td>{{ shift.start|date('H:i') }}</td>#}
+                    {#<td>{{ shift.end|date('H:i') }}</td>#}
+                    {#<td>{{ shift.description }}</td>#}
+                    {#<td>#}
+                    {#<ol class="list-group">#}
+                    {#{% set count = shift.numberPeople - (shift.people|length) %}#}
 
-                                {% if count != 0 %}
-                                    {% for person in 1..count %}
-                                        {% if not plan.isTemplate %}
-                                            <li class="list-group-item"><a class="text-nowrap" href="{{ path('person_new', { 'shift': shift.id }) }}">{% trans %}enroll{% endtrans %}</a> </li>
-                                        {% else %}
-                                            <li class="list-group-item">{% trans %}person{% endtrans %}</li>
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endif %}
-                            </ol>
-                        </td>
-                    </tr>
+                    {#{% for person in shift.people %}#}
+                    {#{% if not plan.isTemplate %}#}
+                    {#{% if (is_granted('ROLE_USER') and app.user.id == plan.user.id) %}#}
+                    {#<li class="list-group-item flex-column align-items-start">#}
+                    {#<div class="d-flex w-100 justify-content-between">#}
+                    {#<span class="mb-1"><b>{{ person.name }}</b></span>#}
+                    {#<small>{% if is_granted('ROLE_USER') %}<a class="edit" href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil pull-right" aria-hidden="true"></i></a>{% endif %}</small>#}
+                    {#</div>#}
+
+                    {#<ul id="person-details">#}
+                    {#{% if person.email %}<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:{{ person.email }}?Subject=Kontakt Schichtplan: {{ plan.title }} " target="_top">{{ person.email }}</a></li>{% endif %}#}
+                    {#{% if person.phone %}<li><i class="fa fa-phone" aria-hidden="true"></i> {{ person.phone|phone_number_format('INTERNATIONAL') }}</li>{% endif %}#}
+                    {#</ul>#}
+                    {#</li>#}
+                    {#{% else %}#}
+                    {#<li class="list-group-item">{{ person.alias }}</li>#}
+                    {#{% endif %}#}
+                    {#{% else %}#}
+                    {#<li class="list-group-item">Person</li>#}
+                    {#{% endif %}#}
+                    {#{% endfor %}#}
+
+                    {#{% if count != 0 %}#}
+                    {#{% for person in 1..count %}#}
+                    {#{% if not plan.isTemplate %}#}
+                    {#<li class="list-group-item"><a class="text-nowrap" href="{{ path('person_new', { 'shift': shift.id }) }}">{% trans %}enroll{% endtrans %}</a> </li>#}
+                    {#{% else %}#}
+                    {#<li class="list-group-item">{% trans %}person{% endtrans %}</li>#}
+                    {#{% endif %}#}
+                    {#{% endfor %}#}
+                    {#{% endif %}#}
+                    {#</ol>#}
+                    {#</td>#}
+                    {#</tr>#}
                 {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        <div class="ssk-sm ssk-group">
-            <a href="whatsapp://send?text={{ app.request.uri }}" class="ssk ssk-whatsapp hidden-md-up"></a>
-            <a href="" class="ssk ssk-facebook"></a>
-            <a href="" class="ssk ssk-twitter"></a>
-            <a href="" class="ssk ssk-email"></a>
-            <a href="" class="ssk ssk-google-plus"></a>
-        </div>
+                {#</tbody>#}
+                {#</table>#}
+            </div>
+            <div class="ssk-sm ssk-group">
+                <a href="whatsapp://send?text={{ app.request.uri }}" class="ssk ssk-whatsapp hidden-md-up"></a>
+                <a href="" class="ssk ssk-facebook"></a>
+                <a href="" class="ssk ssk-twitter"></a>
+                <a href="" class="ssk ssk-email"></a>
+                <a href="" class="ssk ssk-google-plus"></a>
+            </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
                 <strong>{% trans %}warning{% endtrans %}!</strong> {% trans %}no_shifts_defined{% endtrans %}
             </div>
             <img class="img-fluid." src="https://media.giphy.com/media/MmFVEhDzF0UUw/giphy.gif">
         {% endif %}
-    </div>
-
-    <div class="modal fade" id="getPasswordModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <form action="{{ path("fos_user_security_check") }}" method="post">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">{% trans %}show_shift_details{% endtrans %}</h5>
-                        <span class="close-cross" aria-label="Close">
+</div>
+        <div class="modal fade" id="getPasswordModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <form action="{{ path("fos_user_security_check") }}" method="post">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">{% trans %}
+                                show_shift_details{% endtrans %}</h5>
+                            <span class="close-cross" aria-label="Close">
                             <a href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
                         </span>
-                    </div>
-                    <div class="modal-body">
-                        <label>{{ 'email'|trans }}</label>
-                        <input class="form-control" type="text" name="_username" required="required" />
+                        </div>
+                        <div class="modal-body">
+                            <label>{{ 'email'|trans }}</label>
+                            <input class="form-control" type="text" name="_username" required="required"/>
 
-                        <label>{{ 'password'|trans }}</label>
-                        <input class="form-control" type="password" name="_password" required="required" />
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-                    </div>
-                    <div class="modal-footer">
-                        <a href="{{ path('fos_user_resetting_request') }}">{% trans %}lost_password{% endtrans %}</a>
-                        <button class="btn btn-primary" type="submit">{% trans %}submit{% endtrans %}</button>
-                    </div>
-                </form>
+                            <label>{{ 'password'|trans }}</label>
+                            <input class="form-control" type="password" name="_password" required="required"/>
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="{{ path('fos_user_resetting_request') }}">{% trans %}
+                                lost_password{% endtrans %}</a>
+                            <button class="btn btn-primary" type="submit">{% trans %}submit{% endtrans %}</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-{% endblock %}
+
+
+    {% endblock %}
